@startuml
  hide circle
  skinparam classAttributeIconSize 0
  left to right direction
  title FinTrack Core Module Overview

  class FinTrack
  class Ui
  class Parser
  class FinanceManager
  interface Storage
  class CsvStorage
  class PlainTextStorage

  FinTrack ..> FinanceManager : invoke commands
  FinTrack ..> Parser : parse commands
  FinTrack ..> Ui : render messages
  FinTrack ..> PlainTextStorage : load/save session
  FinTrack ..> Storage : delegate exports
  CsvStorage ..|> Storage
  FinTrack ..> CsvStorage : instantiate for export
  PlainTextStorage ..> FinanceManager : populate state
  Parser ..> Ui : use command prefixes

  @enduml
